--- a/ChamadaApplication/res/values/strings.xml
+++ b/ChamadaApplication/res/values/strings.xml
@@ -15,6 +15,10 @@
     
     <string name="menu">Menu</string>    
     
+    <string name="hora_inicio">Hora inicio:</string>
+    <string name="hora_fim">Hora fim:</string>    
+    <string name="hora_default">00:00</string>
+    
     <string name="addDisciplinaIcon">Cadastrar nova disciplina</string>
 
 </resources>
